# secretSanctuary

./: .env.example  .gitignore  Pipfile  README.md  app.py  constants.py  main.py  pyproject.toml  requirements.txt  utils.py
cogs/: confessions.py  suggestions.py
data/: confessions.json  pfps.txt
templates/: confessions.html  feedback.html  feedbacks-view.html  index.html  suggestions.html  suggestions_view.html  tos.html
