[tool.poetry]
name = "secretsanctuary-v2"
version = "0.1.0"
description = ""
authors = ["Zane <90309290+Zingzy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
Flask = "f"
Flask-Cors = "^4.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
